--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,5 @@
 /* ---BASE--- */
+
 *{
     box-sizing: border-box; 
     margin: 0; 
@@ -52,6 +53,7 @@ h3{
     border: 2px #08719b solid;
 }
 
+
 /* ---HEADER--- */
 
 header{
@@ -63,22 +65,48 @@ header{
     align-items: center;
 }
 
-/* ---FORM--- */
+
+/* ---FORM --- */
 
 .main{
     align-items: center;
-    margin: 50px 80px;
-    height: 100vh;
+    margin: 50px 30px;
 }
 
-form label{
+.form-cont{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.form h3{
+    display: block;
+    font-size: 22px;
+    line-height: 30px;
+    margin-bottom: 20px;
+}
+
+.form label{
     display: block;
 }
 
-form input{
+.form input{
     padding: 10px;
     margin: 15px 0;
 }
+
+
+/* ---FORM-SEARCH --- */
+
+.form-search{
+    width: 50%;
+}
+
+/* ---FORM-INSERT --- */
+
+
+
+
+/* ---CARD --- */
 
 .card{
     margin: 20px 0;
@@ -97,6 +125,7 @@ form input{
     margin-bottom: 20px;
 }
 
+
 /* ---FOOTER--- */
 
 footer{
@@ -112,6 +141,7 @@ footer{
 footer img{
     margin-right: 15px;
 }
+
 
 /* ---MEDIA QUERY--- */
 
