--- a/css/common.css
+++ b/css/common.css
@@ -40,6 +40,7 @@ h3{
     background: none;
     color: #08719b;
     padding: 10px;
+    margin: 20px 0;
     text-align: center;
     border: 2px #08719b solid;
     transition: all 0.2s;
